--- a/app/src/main/res/layout/layout_person_home_header.xml
+++ b/app/src/main/res/layout/layout_person_home_header.xml
@@ -1,151 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
-    <FrameLayout
-            android:id="@+id/person_home_header_image_holder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <ImageView
-                android:id="@+id/person_home_header_blur"
-                android:scaleType="centerCrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-        <ImageView
-                android:id="@+id/profile_cover"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#77000000"/>
-
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <cn.xiaojs.xma.ui.widget.PortraitView
-                    android:id="@+id/person_home_head"
-                    android:scaleType="fitXY"
-                    app:oval="true"
-                    app:border_color="@color/white"
-                    app:border_width="@dimen/px1"
-                    android:src="@drawable/default_avatar"
-                    android:layout_marginTop="@dimen/px100"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="@dimen/px140"
-                    android:layout_height="@dimen/px140"/>
-
-            <cn.xiaojs.xma.ui.widget.IconTextView
-                    android:id="@+id/person_home_name"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/px10"
-                    android:textSize="@dimen/font_30px"
-                    android:textColor="@color/white"
-                    app:gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-            <LinearLayout
-                    android:id="@+id/person_home_layout"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/px15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone">
-
-                <TextView
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/font_28px"
-                        android:text="初级学员"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                <TextView
-                        android:id="@+id/person_home_level"
-                        android:textColor="@color/font_orange"
-                        android:textSize="@dimen/font_28px"
-                        android:layout_marginLeft="@dimen/px10"
-                        android:text="P8"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                <cn.xiaojs.xma.ui.widget.EvaluationStar
-                        android:layout_marginLeft="@dimen/px10"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-            <TextView
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/font_28px"
-                    android:text="@string/default_profile_txt"
-                    android:layout_marginTop="@dimen/px15"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            <LinearLayout
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/px15"
-                    android:layout_marginBottom="@dimen/px30"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                <TextView
-                        android:id="@+id/person_home_fans"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/font_28px"
-                        android:text="660005 粉丝"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                <View
-                        android:layout_marginLeft="@dimen/px15"
-                        android:layout_width="@dimen/px1"
-                        android:layout_height="@dimen/px30"
-                        android:layout_gravity="center_vertical"
-                        android:background="@color/white"/>
-
-                <TextView
-                        android:id="@+id/person_home_follow"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/font_28px"
-                        android:layout_marginLeft="@dimen/px15"
-                        android:text="220 关注"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                <View
-                        android:id="@+id/person_home_follow_divider"
-                        android:layout_marginLeft="@dimen/px15"
-                        android:layout_width="@dimen/px1"
-                        android:layout_height="@dimen/px30"
-                        android:layout_gravity="center_vertical"
-                        android:background="@color/white"/>
-
-                <TextView
-                        android:id="@+id/person_home_teaching_length"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/font_28px"
-                        android:layout_marginLeft="@dimen/px15"
-                        android:text="0 教学时长(小时)"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-            </LinearLayout>
-        </LinearLayout>
-    </FrameLayout>
+    <include layout="@layout/layout_personal_info"/>
 
     <LinearLayout
             android:id="@+id/person_home_summary_wrapper"
