--- a/app/src/main/res/layout/activity_post_dynamic.xml
+++ b/app/src/main/res/layout/activity_post_dynamic.xml
@@ -12,7 +12,9 @@
             android:layout_height="@dimen/px330"
             android:gravity="left"
             android:background="@android:color/transparent"
-            android:padding="@dimen/px30"
+            android:padding="@dimen/px26"
+            android:textColor="@color/font_black"
+            android:textSize="@dimen/font_29px"
             android:hint="@string/input_dyn_hint"
             >
 
@@ -23,8 +25,8 @@
             android:id="@+id/post_dynamic_add_picture"
             android:background="@drawable/white_bolder_bg"
             android:layout_marginLeft="@dimen/px30"
-            android:layout_width="@dimen/px160"
-            android:layout_height="@dimen/px160">
+            android:layout_width="@dimen/px154"
+            android:layout_height="@dimen/px154">
 
         <ImageView
                 android:id="@+id/post_dynamic_picture"
@@ -55,7 +57,7 @@
         <TextView
                 android:id="@+id/who_can_see"
                 android:textColor="@color/common_text"
-                android:textSize="@dimen/font_28px"
+                android:textSize="@dimen/font_27px"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
                 android:layout_marginRight="@dimen/px30"
@@ -68,7 +70,7 @@
         <TextView
                 android:layout_toLeftOf="@+id/who_can_see"
                 android:textColor="@color/font_black"
-                android:textSize="@dimen/font_30px"
+                android:textSize="@dimen/font_29px"
                 android:paddingTop="@dimen/font_30px"
                 android:paddingBottom="@dimen/px30"
                 android:text="@string/who_can_see_me"
@@ -98,7 +100,7 @@
             <TextView
                     android:id="@+id/remind_somebody"
                     android:textColor="@color/common_text"
-                    android:textSize="@dimen/font_28px"
+                    android:textSize="@dimen/font_27px"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
                     android:layout_marginRight="@dimen/px30"
@@ -110,7 +112,7 @@
             <TextView
                     android:layout_toLeftOf="@+id/remind_somebody"
                     android:textColor="@color/font_black"
-                    android:textSize="@dimen/font_30px"
+                    android:textSize="@dimen/font_29px"
                     android:paddingTop="@dimen/font_30px"
                     android:paddingBottom="@dimen/px30"
                     android:text="@string/remind_somebody"
