登录注册，提示文案修改

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/px30"
                 android:paddingBottom="@dimen/px30"
-                android:hint="@string/phone_empty"
+                android:hint="@string/login_reg_phone_hint"
                 android:imeOptions="actionNext"
                 android:inputType="phone"
                 android:layout_marginLeft="@dimen/px38"
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/px30"
                 android:paddingBottom="@dimen/px30"
-                android:hint="@string/pwd_empty"
+                android:hint="@string/login_pwd_hint"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:layout_marginLeft="@dimen/px38"
